[package]
name = "wisp-server-workers"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bytes = "1.6.0"
event-listener = "5.3.1"
flume = "0.11.0"
futures-util = "0.3.30"
regex = "1.10.5"
send_wrapper = "0.6.0"
thiserror = "2.0.12"
tokio = { version = "1.38.0", features = ["io-util", "rt", "macros"] }
tokio-util = { version = "0.7.15", features = ["compat", "io"] }
wisp-mux = { git = "https://github.com/MercuryWorkshop/epoxy-tls", features = ["wasm"] }
worker = "0.5.0"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
